--- a/assets/style/abstracts/variables/_colors.scss
+++ b/assets/style/abstracts/variables/_colors.scss
@@ -27,3 +27,7 @@ $shinka__red: #ff1414;
 $shinka__border: #d8d8d8;
 $shinka__grey: #f2f2f2;
 $shinka__grey-text: #6a6a6a;
+
+/* Dark theme */
+$shinka__dark-border: #262626;
+$shinka__dark-background: #151515;
