--- a/assets/style/abstracts/variables/_colors.scss
+++ b/assets/style/abstracts/variables/_colors.scss
@@ -20,9 +20,9 @@ $color__border-input: #ccc;
 $color__border-abbr: #666;
 
 /* Custom */
-$shinka__black: #000000;
+$shinka__black: #000;
 $shinka__header: #212121;
-$shinka__white: #ffffff;
+$shinka__white: #fff;
 $shinka__red: #ff1414;
 $shinka__border: #d8d8d8;
 $shinka__grey: #f2f2f2;
