--- a/assets/admin/style/login.css
+++ b/assets/admin/style/login.css
@@ -1,3 +1,3 @@
 .login h1 a {
-    background-image: url('../images/icons/gt-icon.png');
+    background-image: url('../../images/icons/favicon.png');
 }
