--- a/assets/style/base/typography/_typography.scss
+++ b/assets/style/base/typography/_typography.scss
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: 'Roboto';
+	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 300;
 	font-display: swap;
@@ -8,7 +8,7 @@
   
 /* roboto-regular - latin */
 @font-face {
-	font-family: 'Roboto';
+	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
@@ -17,7 +17,7 @@
   
 /* roboto-italic - latin */
 @font-face {
-	font-family: 'Roboto';
+	font-family: "Roboto";
 	font-style: italic;
 	font-weight: 400;
 	font-display: swap;
@@ -26,7 +26,7 @@
   
 /* roboto-700 - latin */
 @font-face {
-	font-family: 'Roboto';
+	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
