--- a/assets/style/utilities/_dark-mode.scss
+++ b/assets/style/utilities/_dark-mode.scss
@@ -31,7 +31,7 @@ body.dark-mode {
     .shinka-archive__timeline-news-category {
         color: $shinka__red;
     }
-    .shinka-sidebar, .shinka-post__content {
+    .shinka-sidebar, .shinka-post__content, .shinka-archive__timeline-news, .shinka-archive__sidebar, .shinka-game__info-content, .shinka-archive__pre-content, .shinka-game-releases__item {
         border-color: $shinka__dark-border;
     }
     .shinka-search__field {
