--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://www.gamingtalker.it
 Author: Alessandro Zangrandi & Automattic
 Author URI: https://alexzandev.github.io
 Description: Shinka is a WordPress starter theme based on <code>_s</code>, or <em>underscores</em>, by Automattic.
-Version: 1.0.0
+Version: 1.0.1
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
@@ -86,3 +86,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /* Alignments
 --------------------------------------------- */
 @import "utilities/alignments";
+
+/* Dark theme
+--------------------------------------------- */
+@import "utilities/dark-mode";
